2006-09-05  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/templates.c, src/document.c, src/filetypes.c:
   Added new file template for filetype HTML.
 * src/document.c, src/dialogs.c:
   Don't quit when an error occurs while saving changed files.


2006-09-05  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/utils.c, src/utils.h, src/ui_utils.c, src/ui_utils.h,
   src/keybindings.c, src/about.c, src/treeviews.c, src/msgwindow.c,
   src/callbacks.c, src/notebook.c, src/sci_cb.c, src/keyfile.c,
   src/vte.c, src/document.c, src/prefs.c, src/main.c,
   po/POTFILES.in, src/Makefile.am, src/makefile.win32:
   Moved UI related utils from utils.c to ui_utils.c.


2006-09-04  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/keyfile.c, src/main.c, src/main.h:
   Rename --no-socket, -s command-line option to --new-instance, -i.
   Add --no-session, -s command-line option to not load session files.
   Only save session when session files were loaded at startup.
 * doc/geany.docbook:
   Update command-line options and running instance behaviour.
 * src/callbacks.c, src/callbacks.h, src/sci_cb.c, src/sci_cb.h,
   src/keybindings.c, src/document.c:
   Move current_word and clickpos to editor_info struct in sci_cb.c.
   Move on_editor_button_press_event to sci_cb.c.


2006-09-03  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/main.c: Open a new instance without loading session files if
               socket already exists and no filenames are specified
               on the command-line.


2006-09-03  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/utils.c: Save All button is also active when only one file is
                changed(improves usability).


2006-09-02  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/document.c, src/search.c:
   Escape special characters when shown in the status window after
   "Replace All" or replacing a selection.
   Set the focus to the replace entry widget when pressing the