@@ -1,3 +1,9 @@
+2006-09-06  Enrico Tröger  <enrico.troeger@uvena.de>
+
+ * src/callbacks.c, src/document.c, src/ui_utils.c, src/sci_cb.c:
+   Added own implementation of an Undo stack (not yet working).
+
+
 2006-09-05  Enrico Tröger  <enrico.troeger@uvena.de>
 
  * src/templates.c, src/document.c, src/filetypes.c:
